# FlowshopSolveR

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  DESCRIPTION  Dockerfile  NAMESPACE  README.md  configure  docker-compose.yml  install.R  out.best.txt  run_all.sh  tran.txt
R/: AlgorithmSpace.R  ProblemSpace.R  RcppExports.R  Scenario.R  algorithm_space.R  buildPerformanceData.R  build_aclib2_experiments.R  build_performance_data.R  featuresCache.R  features_space.R  flowshop_instance_space.R  flowshop_model_space.R  flowshop_problem_space.R  fsp_solver_performance.R  generate_test_instances.R  iraceWrappers.R  lon_metrics.R  make_irace_variation.R  make_performance_sample_evaluation.R  parameter_filters.R  permutation_distances.R  population_to_configs.R  read_runs.R  real_bounds.R  run_configs.R  run_experiment.R  run_solver_process.R  run_tunner.R  run_validation.R  samplePerformance.R  sample_performance.R  trainBestSolver.R  train_best_solver.R
R/aos/: summary.R
aclib2/: Dockerfile  build-and-run.sh  irace_aclib2.R  irace_results-f-test.rda  irace_results.rda  run_experiments.sh
aclib2/fsp/: experiments.txt
bench/: CMakeLists.txt  bm-fsp-eval.cpp
cmake/: Conan.cmake  ConfigGBench.cmake  FindCPLEX.cmake  FindParadiseo.cmake
data/: features.tar.xz  lower_bounds.csv  lower_bounds_data.csv  taillard_instances.csv
data/features/: test.csv  train.csv
data/instance_sets/: test.csv  train.csv
data/lower_bounds/: 1153.rds  1155.rds  1157.rds  1159.rds  1161.rds  1163.rds  1165.rds  1167.rds  1169.rds  1171.rds  1173.rds  1175.rds  (+228 more)
doc/: CMakeLists.txt  doxyfile.cmake  index.h
main/: CMakeLists.txt  cmaes.cpp  dde.cpp  emumerate.cpp  exact-solver.cpp  flowshop-solver.cpp  flowshop_solver.cpp  fsp_solver.cpp  hc_fs_eval.cpp  hppso_myriam.cpp  hppso_run.cpp  ils2.cpp  random-search.cpp  randseed_gen.cpp  refine.cpp  sa-test.cpp
man/: ig-aos-flowshop-package.Rd
reports/: 01-aclib-study.Rmd  01-generate-aclib-instances.R  01-instances-generation.Rmd  01-instances-generation.tex  01-vanilla-ig-tests.Rmd  02-best-solver.R  02-build_performance_data.R  02.1-build-ablation-data.R  03-build-features-data.R  04-build-models.R  05-evaluate-models.Rmd  05-evaluate-models.tex  06-evaluate-models-optimization.R  bestSolver.R  buildPerformance.R  clusterTest.R  presentation.Rmd  read_runs.R  run_configs.R
scripts/: aos_tests_ig.sh  build_binaries.sh  refine.sh  rsync_runs.sh  run-all.sh
src/: Makevars  RcppExports.cpp  rcpp_hello_world.cpp
src/flowshop-solver/: CMakeLists.txt  FSPProblemFactory.cpp  FSPProblemFactory.hpp  MHParamsSpecs.hpp  MHParamsSpecsFactory.cpp  MHParamsSpecsFactory.hpp  MHParamsValues.hpp  MHSolve.hpp  ParamSpec.hpp  RunOptions.hpp  eoFSPFactory.hpp  eoFactory.hpp  fla_methods.hpp  fspproblemfactory.cpp  fspproblemfactory.hpp  global.cpp  global.hpp  heuristics.hpp  moHiResTimeContinuator.hpp  specsdata.cpp  specsdata.hpp
src/flowshop-solver/aos/: EpsilonGreedy.hpp  adaptive_operator_selection.hpp  adaptive_pursuit.hpp  beta_distribution.hpp  fixed.hpp  frrmab.hpp  lin_ucb.hpp  probability_matching.hpp  random.hpp  thompson_sampling.hpp
src/flowshop-solver/continuators/: myMovedSolutionStat.hpp  myTimeStat.hpp
src/flowshop-solver/fla/: AdaptiveWalkLengthFLA.hpp  AutocorrelationFLA.hpp  EdgeTypeCounters.hpp  FitnessDistanceCorrelationFLA.hpp  FitnessHistory.hpp  FitnessHistoryFLA.hpp  FitnessLandscapeMetric.hpp  LONSampling.hpp  LocalOptimaNetwork.hpp  MarkovChainLONSampling.hpp  NeighborhoodFLA.hpp  NeutralityFLA.hpp  SampleRandomWalk.hpp  SampleSolutionStatistics.hpp  SnowballLONSampling.hpp
src/flowshop-solver/heuristics/: AdaptiveBestInsertionExplorer.hpp  AdaptiveDestructionConstruction.hpp  AdaptiveLocalSearch.hpp  AdaptivePerturb.hpp  AppendingNEH.hpp  BestInsertionExplorer.hpp  DestructionConstruction.hpp  FSPOrderHeuristics.hpp  FitnessReward.hpp  IGBP.hpp  IGexplorer.hpp  IGexplorerWithRepl.hpp  InitLocalSearch.hpp  InsertionStrategy.hpp  NEH.hpp  NEHInit.hpp  OpPerturbDestConst.hpp  acceptCritTemperature.hpp  aco.hpp  adaptive_destruction.hpp  all.hpp  dummyAspiration.hpp  falseContinuator.hpp  fastigexplorer.hpp  fastnehheuristic.hpp  fspmoshiftneighbor.hpp  hc.hpp  ig.hpp  ig_lsps.hpp  ihc.hpp  ils.hpp  ilsKickOp.hpp  isa.hpp  moFirstBestTS.hpp  moFirstBestTSexplorer.hpp  moFirstTS.hpp  moFirstTSexplorer.hpp  neh.hpp  neighborhood_checkpoint.hpp  neighborhood_stat.hpp  (+6 more)
src/flowshop-solver/heuristics/perturb/: AdaptiveDestructionConstruction.hpp  AdaptivePositionDestructionStrategy.hpp  DestructionConstruction.hpp  DestructionStrategy.hpp  IGLocalSearchPartialSolution.hpp  OpPerturbDestConst.hpp  RandomDestructionStrategy.hpp  ilsKickOp.hpp  perturb.hpp  randomNeutralWalkExplorer.hpp
src/flowshop-solver/neighborhood-size/: AdaptiveNeighborhoodSize.hpp  FixedNeighborhoodSize.hpp  NeighborhoodSize.hpp
src/flowshop-solver/number-of-swaps/: AdaptiveNumberOfSwaps.hpp  FixedNumberOfSwaps.hpp  NumberOfSwaps.hpp
src/flowshop-solver/position-selector/: AdaptiveNoReplacementPositionSelector.hpp  AdaptivePositionSelector.hpp  PositionSelector.hpp
src/flowshop-solver/problems/: FSP.hpp  FSPData.cpp  FSPData.hpp  FSPEval.hpp  FSPEvalFunc.hpp  FSPProblem.hpp  FastFSPNeighborEval.hpp  FastNWNeighborMakespanEval.hpp  NIFSPEvalFunc.hpp  NWFSPEvalFunc.hpp  NoIdleFSPEval.hpp  NoIdleFSPNeighborEval.hpp  NoWaitFSPEval.hpp  NoWaitFSPNeighborMakespanEval.hpp  PermFSPEval.hpp  PermFSPNeighborMakespanEval.hpp  PermNeighborMakespanEval.hpp  Problem.hpp  fastfspeval.cpp  fastfspeval.hpp
src/flowshop-solver/problems/cec2015/: benchmarks.hpp
test/: CMakeLists.txt  test-aco.cpp  test-all.cpp  test-aos.cpp  test-comparators.cpp  test-fla.cpp  test-fsp.cpp  test-heuristic.cpp  test-jsp.cpp  test-mh-params-specs.cpp  test-or-tools.cpp  test-solve.cpp  test.txt
test/heuristic/: test-AppendingNEH.hpp  test-IG.hpp  test-InsertionStrategy.hpp  test-NEH.hpp  test-PositionSelector.hpp
test/problem/: test-AppendingNEH.hpp  test-FSPNeighbor.hpp  test-FSPNoIdle.hpp  test-FSPNoWait.hpp  test-FSPOrderHeuristics.hpp  test-FSPPerm.hpp
(+267 files in other folders)
